--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,11 +1,12 @@
-# Settings for Backend (on Cloud Run).
-# See https://firebase.google.com/docs/app-hosting/configure#cloud-run
+# Settings for the App Hosting backend.
+# See https://firebase.google.com/docs/app-hosting/configure-backend
+requiredGpuCount: 0
 runConfig:
   minInstances: 0
-  # maxInstances: 100
-  # concurrency: 80
-  # cpu: 1
-  # memoryMiB: 512
+  maxInstances: 100
+  concurrency: 80
+  cpu: 1
+  memoryMiB: 512
 
 # Environment variables and secrets.
 # env:
