--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,24 +1,6 @@
 # Settings for the App Hosting backend.
 # See https://firebase.google.com/docs/app-hosting/configure-backend
-requiredGpuCount: 0
 runConfig:
-  minInstances: 0
-  maxInstances: 100
-  concurrency: 80
   cpu: 1
   memoryMiB: 512
-
-# Environment variables and secrets.
-# env:
-  # Configure environment variables.
-  # See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment
-  # - variable: MESSAGE
-  #   value: Hello world!
-  #   availability:
-  #     - BUILD
-  #     - RUNTIME
-
-  # Grant access to secrets in Cloud Secret Manager.
-  # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
-  # - variable: MY_SECRET
-  #   secret: mySecretRef
+env: []
