--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "1.18.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
