O erro persiste, pode ser algo com a plataforma?

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,7 +1,8 @@
 # Settings for the App Hosting backend.
 # See https://firebase.google.com/docs/app-hosting/configure-backend
 build:
-  builder: nodejs
+  buildpacks:
+    - command: npm run build
 runConfig:
   cpu: 1
   memoryMiB: 512
