--- a/src/package.json
+++ b/src/package.json
@@ -50,9 +50,9 @@
     "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "19.0.0-rc.0",
+    "react": "^19.0.0-rc.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc.0",
+    "react-dom": "^19.0.0-rc.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
