--- a/package.json
+++ b/package.json
@@ -41,18 +41,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "1.18.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.475.0",
-    "next": "15.0.0-rc.0",
+    "next": "^15.5.5",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "19.0.0-rc.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc.0",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -60,6 +59,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
