--- a/src/package.json
+++ b/src/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
+    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts"
   },
   "dependencies": {
     "@dataconnect/generated": "file:src/dataconnect-generated",
+    "@genkit-ai/core": "1.18.0",
     "@genkit-ai/googleai": "1.18.0",
     "@genkit-ai/next": "1.18.0",
     "@hookform/resolvers": "^4.1.3",
@@ -47,12 +48,12 @@
     "genkit": "1.18.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.475.0",
-    "next": "15.0.0-rc.0",
+    "next": "15.0.3",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "^19.0.0-rc.0",
+    "react": "18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0-rc.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -69,6 +70,6 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   }
 }
