Neste link ele funciona normalmente, apenas no eternalminds.fun que não

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,1 @@
-{"hosting":{"rewrites":[{"source":"**","apphosting":{"backendId":"studio"}}]}}
+{"hosting":{"site":"time-traveler-talks","rewrites":[{"source":"**","apphosting":{"backendId":"studio"}}]}}
