--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "genkit": "1.18.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.475.0",
-    "next": "15.0.0",
+    "next": "14.2.5",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -60,8 +60,8 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/node": "^20",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "genkit-cli": "1.18.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
